# viceroybot

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  get_trending.sh  pyproject.toml  random_tweet.py  random_tweet.sh  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: lib.rs
viceroybot/: __about__.py  __init__.py  model.py  predictor.py  train.py  tweet.py  viceroy.py
